# GitHubAPI-Crawler

./: .gitignore  README.md  download_kaggle.py  gather-nbs.py  gather_info.py  github_api.py  main.py  pyproject.toml  result_analysis.ipynb  search-keyword.py
evaluation_materials/: README.md  analysis-result.csv  ground-truth.csv  kaggle_list.txt  manual-labels.csv  repos.txt
